bases/apps/taskplanner/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: taskplanner
spec:
  selector:
    matchLabels:
      app: taskplanner
  template:
    metadata:
      labels:
        app: taskplanner
    spec:
      containers:
        - name: taskplanner
          image: ghcr.io/kmjayadeep/taskplanner-server:20250223131708 # {"$imagepolicy": "taskplanner:taskplanner"}
          resources:
            requests:
              memory: "50Mi"
              cpu: "25m"
            limits:
              memory: "100Mi"
              cpu: "250m"
